# BuddyGym

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
bot-service/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
bot-service/alembic/: env.py
bot-service/alembic/versions/: 0001_notifications.py
bot-service/src/: main.py
bot-service/src/core/: config.py
bot-service/src/notifications/: events.py  fanout.py  models.py  photos.py  sender.py  service.py  texts.py
bot-service/src/pb/buddygym/v1/: checkin_pb2.py  checkin_pb2_grpc.py
bot-service/src/render/: cards.py  draw.py  theme.py
bot-service/tests/: conftest.py  test_fanout.py  test_render.py  test_service.py
core-service/: Dockerfile  go.mod  go.sum
core-service/cmd/core/: main.go
core-service/docs/: docs.go  swagger.json  swagger.yaml
core-service/internal/auth/: jwt.go  jwt_test.go  telegram.go  telegram_test.go
core-service/internal/avatar/: avatar_test.go  mirror.go  store.go  telegram.go
core-service/internal/checkin/: client.go
core-service/internal/config/: config.go  config_test.go
core-service/internal/domain/: achievements.go  freeze.go  freeze_test.go  invite.go  models.go  rewards.go  rewards_test.go  sports.go  status.go  status_test.go
core-service/internal/grpcserver/: server.go  server_test.go
core-service/internal/httpapi/: fakes_test.go  handlers_auth.go  handlers_avatar.go  handlers_buddies.go  (+14 more)
deploy/nginx/: buddygym.conf
deploy/postgres/: init.sql
(+36 files in other folders)
