[project]
name = "buddygym-bot"
version = "0.1.0"
description = "BuddyGym notification bot: renders branded cards and delivers them in Telegram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.30.0",
    "aiolimiter>=1.2.1",
    "aioboto3>=15.5.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    "grpcio>=1.76.0",
    "pillow>=12.3.0",
    "protobuf>=6.33.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.76.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "testcontainers[postgres]>=4.13.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src/pb"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires PostgreSQL through Docker",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["src/pb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
